# nx-software-updater

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  nx_software_updater.desktop  org.nxos.softwareupdater.desktop  travis-build.sh
debian/: README.Debian  README.source  changelog  control  copyright  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  nx-software-updater.cron.d.ex  nx-software-updater.default.ex  nx-software-updater.doc-base.EX  nx-software-updater.substvars  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
kcm/: CMakeLists.txt  nxsoftwareupdaterkcm.cpp  nxsoftwareupdaterkcm.h  org_nxos_softwareupdater.desktop
kcm/package/: metadata.desktop
kcm/package/contents/ui/: ButtonsContainerComponentForm.ui.qml  MainComponent.qml  PackageListComponent.qml  PackageListItemDelegateForm.ui.qml  qml.qrc
src/: CMakeLists.txt  main.cpp  qmldir  softwareupdaterplugin.cpp  softwareupdaterplugin.h
src/actions/: actionids.h  org.nxos.softwareupdater.actions
src/dto/: packagedto.cpp  packagedto.h
src/entities/: apt.cpp  apt.h  nxi.cpp  nxi.h  package.h  packagemanager.cpp  packagemanager.h  packages.cpp  packages.h  reminder.cpp  reminder.h  superuser.cpp  superuser.h
src/helpers/: apthelper.cpp  apthelper.h  nxihelper.cpp  nxihelper.h  rootshellkauthhelper.cpp  rootshellkauthhelper.h  shellhelper.cpp  shellhelper.h
src/interactors/: downloadandinstallinteractor.cpp  downloadandinstallinteractor.h  interactor.cpp  interactor.h  packagelistinteractor.cpp  packagelistinteractor.h  quitinteractor.cpp  quitinteractor.h  remindlaterinteractor.cpp  remindlaterinteractor.h  superuseraccessinteractor.cpp  superuseraccessinteractor.h  updateinteractor.cpp  updateinteractor.h  upgradeinteractor.cpp  upgradeinteractor.h
src/listeners/: packagelistlistener.h  updatelistener.h  upgradelistener.h
src/tests/: CMakeLists.txt  DummyAptHelper.cpp  DummyAptHelper.h  entities_tests.cpp
src/ui/: main.qml  mainviewcontroller.cpp  mainviewcontroller.h  packagelistviewcontroller.cpp  packagelistviewcontroller.h  quitviewcontroller.cpp  quitviewcontroller.h  remindlaterviewcontroller.cpp  remindlaterviewcontroller.h  updateviewcontroller.cpp  updateviewcontroller.h  upgradeviewcontroller.cpp  upgradeviewcontroller.h  viewcontroller.cpp  viewcontroller.h
src/ui/qml/: ButtonsContainerComponent.qml  ButtonsContainerComponentForm.ui.qml  FetchingListComponent.qml  FetchingListComponentForm.ui.qml  MainComponent.qml  MainComponentForm.ui.qml  PackageListComponent.qml  PackageListComponentForm.ui.qml  PackageListItemDelegate.qml  main.qml  qml.qrc
